src/objects/AccountMaster__c.object
<CustomObject>
    <description>Master of account items</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>前受付金</fullName>
                </value>
                <value>
                    <fullName>プラン</fullName>
                </value>
                <value>
                    <fullName>室料</fullName>
                </value>
                <value>
                    <fullName>朝食</fullName>
                </value>
                <value>
                    <fullName>夕食</fullName>
                </value>
                <value>
                    <fullName>非表示</fullName>
                </value>
                <value>
                    <fullName>支払</fullName>
                </value>
                <value>
                    <fullName>サービス料</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy__c</fullName>
        <label>含有アレルギー物質</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>えび</fullName>
                </value>
                <value>
                    <fullName>かに</fullName>
                </value>
                <value>
                    <fullName>小麦</fullName>
                </value>
                <value>
                    <fullName>そば</fullName>
                </value>
                <value>
                    <fullName>卵</fullName>
                </value>
                <value>
                    <fullName>乳</fullName>
                </value>
                <value>
                    <fullName>落花生</fullName>
                </value>
                <value>
                    <fullName>あわび</fullName>
                </value>
                <value>
                    <fullName>いか</fullName>
                </value>
                <value>
                    <fullName>いくら</fullName>
                </value>
                <value>
                    <fullName>オレンジ</fullName>
                </value>
                <value>
                    <fullName>カシューナッツ</fullName>
                </value>
                <value>
                    <fullName>キウイフルーツ</fullName>
                </value>
                <value>
                    <fullName>牛肉</fullName>
                </value>
                <value>
                    <fullName>くるみ</fullName>
                </value>
                <value>
                    <fullName>ごま</fullName>
                </value>
                <value>
                    <fullName>さけ</fullName>
                </value>
                <value>
                    <fullName>さば</fullName>
                </value>
                <value>
                    <fullName>大豆</fullName>
                </value>
                <value>
                    <fullName>鶏肉</fullName>
                </value>
                <value>
                    <fullName>バナナ</fullName>
                </value>
                <value>
                    <fullName>豚肉</fullName>
                </value>
                <value>
                    <fullName>まつたけ</fullName>
                </value>
                <value>
                    <fullName>もも</fullName>
                </value>
                <value>
                    <fullName>やまいも</fullName>
                </value>
                <value>
                    <fullName>りんご</fullName>
                </value>
                <value>
                    <fullName>ゼラチン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BasePlanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>プラングループ設定機能利用する場合、基本プラン標識する【プラン設定】画面から連動設定する</description>
        <label>ベースプラン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchProcessStatusDiv__c</fullName>
        <description>増税処理するため、データ処理される状態を標識する、画面へ非表示する</description>
        <label>バッチ処理区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BestDateInfo__c</fullName>
        <label>賞味期限</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigImage__c</fullName>
        <label>商品写真</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Calorie__c</fullName>
        <label>カロリー</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carbohydrate__c</fullName>
        <label>炭水化物</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CardAccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>カード契約会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会計商品</relationshipLabel>
        <relationshipName>ACardAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategorySub__c</fullName>
        <label>カテゴリサブ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>素材</fullName>
                </value>
                <value>
                    <fullName>野菜類</fullName>
                </value>
                <value>
                    <fullName>肉類</fullName>
                </value>
                <value>
                    <fullName>魚介類</fullName>
                </value>
                <value>
                    <fullName>半加工品</fullName>
                </value>
                <value>
                    <fullName>加工・出汁系</fullName>
                </value>
                <value>
                    <fullName>完成品</fullName>
                </value>
                <value>
                    <fullName>おみやげ品</fullName>
                </value>
                <value>
                    <fullName>珍味</fullName>
                </value>
                <value>
                    <fullName>ハラール</fullName>
                </value>
                <value>
                    <fullName>食材その他</fullName>
                </value>
                <value>
                    <fullName>ビール</fullName>
                </value>
                <value>
                    <fullName>日本酒</fullName>
                </value>
                <value>
                    <fullName>ワイン</fullName>
                </value>
                <value>
                    <fullName>焼酎</fullName>
                </value>
                <value>
                    <fullName>飲料おみやげ品</fullName>
                </value>
                <value>
                    <fullName>飲料その他</fullName>
                </value>
                <value>
                    <fullName>食器</fullName>
                </value>
                <value>
                    <fullName>電気製品</fullName>
                </value>
                <value>
                    <fullName>家具・調度</fullName>
                </value>
                <value>
                    <fullName>アメニティ類</fullName>
                </value>
                <value>
                    <fullName>備品おみやげ品</fullName>
                </value>
                <value>
                    <fullName>備品その他</fullName>
                </value>
                <value>
                    <fullName>マネージャー</fullName>
                </value>
                <value>
                    <fullName>調理人</fullName>
                </value>
                <value>
                    <fullName>接客担当</fullName>
                </value>
                <value>
                    <fullName>清掃担当</fullName>
                </value>
                <value>
                    <fullName>予約担当</fullName>
                </value>
                <value>
                    <fullName>人材その他</fullName>
                </value>
                <value>
                    <fullName>建築・リフォーム</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>食材</fullName>
                </value>
                <value>
                    <fullName>飲料</fullName>
                </value>
                <value>
                    <fullName>備品</fullName>
                </value>
                <value>
                    <fullName>人材</fullName>
                </value>
                <value>
                    <fullName>サービス</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <description>[人材免許、資格]EXPO人材情報へ移行</description>
        <label>RFU(廃止)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <label>手数料(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CodeNumbers__c</fullName>
        <formula>if ( CONTAINS(Field3__c, &apos;P&apos;)  = true, 0,  IF (LEN(Field3__c) =4, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>商品コード桁数が4桁のときは、１を返す</inlineHelpText>
        <label>$商品コード桁数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompnayName__c</fullName>
        <label>社名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>内容量</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CookCount__c</fullName>
        <label>$料理数量</label>
        <summaryForeignKey>FoodDetail__c.AccountMasterRef__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CookTime__c</fullName>
        <label>料理時間（分）</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>#DP</label>
        <referenceTo>DP__c</referenceTo>
        <relationshipName>Account71c4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <label>配達及びコンタクト</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>取りに行く</fullName>
                </value>
                <value>
                    <fullName>宅配便</fullName>
                </value>
                <value>
                    <fullName>ルート配送</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descript__c</fullName>
        <label>■商品情報</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>商品説明</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <label>割引/割増率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <label>キャンペーン方式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>値引</fullName>
                </value>
                <value>
                    <fullName>割引</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayDate__c</fullName>
        <inlineHelpText>EXPOに公開したい場合、該当公開開始予定日を設定してください</inlineHelpText>
        <label>EXPO開示開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPODeleteCal__c</fullName>
        <formula>LastModifiedBy.LastName&amp; &apos; &apos; &amp;LastModifiedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFU(廃止)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimateFieldNo__c</fullName>
        <inlineHelpText>宴会手配書に表示する商品の順番で数字を入力してください</inlineHelpText>
        <label>見積項目#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExhibitType__c</fullName>
        <label>出品区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>出品</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>探している</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoAreaMstCode__c</fullName>
        <label>地域情報コード</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoAreaMstLab__c</fullName>
        <inlineHelpText>詳細画面の「地域情報」ボタンで設定してください</inlineHelpText>
        <label>地域情報</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未設定</fullName>
                    <default>true</default>
                    <label>未設定</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoDeleteUser__c</fullName>
        <label>Expo削除したユーザ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpoHrInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>カテゴリが人材の場合、人材属性情報を入力してください</inlineHelpText>
        <label>人材属性情報</label>
        <referenceTo>ExpoHrInfo__c</referenceTo>
        <relationshipLabel>会計商品</relationshipLabel>
        <relationshipName>ExpoHrInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expo組織情報</label>
        <referenceTo>ExpoOrgInfo__c</referenceTo>
        <relationshipLabel>会計商品</relationshipLabel>
        <relationshipName>ExpoOrgInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpoStockCount__c</fullName>
        <description>Expoサイト専用</description>
        <inlineHelpText>在庫数情報管理</inlineHelpText>
        <label>Expo在庫数</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpoWorkerRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>カテゴリが人材の場合、業者を入力してください</inlineHelpText>
        <label>人材業者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ExpoWorkerRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>小計割引／割増</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>ﾌﾘｰ宣言</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipName>AccountmasterVXNd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field13_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>同一メニューで単価の異なるマスタをつなげるため、たとえば、朝食の単価¥2,000、¥3,000の切り替えのため</inlineHelpText>
        <label>$会計マスタ</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipName>Accountb142_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>集計先変更定義</inlineHelpText>
        <label>#GP</label>
        <referenceTo>GP__c</referenceTo>
        <relationshipName>AccountzeBO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genkaritsu__c</fullName>
        <formula>if ( StsTaxfee__c = &quot;0&quot; , if (Field5__c &lt;&gt; 0, Field7__c / SalesnoneTax__c , 1), 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>税ステータスが非課税のとき、原価/売価、課税は、原価/売価（税抜)</inlineHelpText>
        <label>$原価率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GoodFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>おすすめ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非公開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JanCode__c</fullName>
        <label>JANコード</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KD__c</fullName>
        <label>KD表示文字背景色</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjoKamokuRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計科目</label>
        <referenceTo>KanjoKamoku__c</referenceTo>
        <relationshipName>KanjoKamokuRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LimitedFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>期間限定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lipid__c</fullName>
        <label>脂質</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maker__c</fullName>
        <label>メーカー名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>原材料</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <label>原材料名</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>小麦粉</fullName>
                </value>
                <value>
                    <fullName>糖類</fullName>
                </value>
                <value>
                    <fullName>卵</fullName>
                </value>
                <value>
                    <fullName>ショートニング（大豆油、乳化剤）</fullName>
                </value>
                <value>
                    <fullName>脱脂粉乳</fullName>
                </value>
                <value>
                    <fullName>イースト</fullName>
                </value>
                <value>
                    <fullName>食塩</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MealInfo__c</fullName>
        <label>献立情報</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OES__c</fullName>
        <label>OES用ﾒﾆｭｰ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計OP</label>
        <referenceTo>OP__c</referenceTo>
        <relationshipName>AccountMasterSUow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>原産国名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutsourceFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>業務委託</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLU__c</fullName>
        <label>PLUｺｰﾄﾞ</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayLimitDays__c</fullName>
        <inlineHelpText>期限を設定し（30日など）、計上日から設定した期限まで入金消込されない場合、警告メッセージを送信する</inlineHelpText>
        <label>入金期限日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayType__c</fullName>
        <label>利用できる決済方法</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>売掛</fullName>
                </value>
                <value>
                    <fullName>カード</fullName>
                </value>
                <value>
                    <fullName>振込（事前入金）</fullName>
                </value>
                <value>
                    <fullName>代引</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>カード</fullName>
                </value>
                <value>
                    <fullName>売掛金</fullName>
                </value>
                <value>
                    <fullName>クーポン</fullName>
                </value>
                <value>
                    <fullName>割引</fullName>
                </value>
                <value>
                    <fullName>値引</fullName>
                </value>
                <value>
                    <fullName>予約金</fullName>
                </value>
                <value>
                    <fullName>現金返金</fullName>
                </value>
                <value>
                    <fullName>カード返金</fullName>
                </value>
                <value>
                    <fullName>割増</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlanAutoSyncChk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>プランから会計商品情報更新する場合、該当項目更新を行う、標準画面から該当項目操作対象外</description>
        <label>プラン連携フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanBathTaxAccMstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>入湯税紐付けプランを登録際に、該当プランのIDは会計商品(プラン）の該当項目に自動設定する
該当項目値が存在場合、会計商品（プラン）関連のプランは入湯税商品紐付けの状態と判断する</description>
        <label>プラン(入湯税)（システム用）</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>会計商品</relationshipLabel>
        <relationshipName>PlanBathTaxAccMstRefNCjZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductEnName__c</fullName>
        <label>商品名称（英）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductStatus__c</fullName>
        <inlineHelpText>新品/中古</inlineHelpText>
        <label>商品状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新品</fullName>
                </value>
                <value>
                    <fullName>中古</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductSubCode__c</fullName>
        <label>利用不可</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>if (  StsTaxfee__c  = &quot;0&quot;,  SalesnoneTax__c  -  Field7__c ,  Field5__c -  Field7__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売価-原価、税ステータスありなら、売価/1.05-原価</inlineHelpText>
        <label>$粗利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Protein__c</fullName>
        <label>たんぱく質</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseMaxNum__c</fullName>
        <label>個人最大購買数</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonableStock__c</fullName>
        <label>適正在庫</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentalFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>レンタルフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepeatDiscountPrice__c</fullName>
        <label>定期購入価格値引</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepeatDiscountRate__c</fullName>
        <label>定期購入価額割引</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RepeaterFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>定期購入</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_5__c</fullName>
        <inlineHelpText>セットメニューのインデックス番号、セットメニュー群は最大50個まで</inlineHelpText>
        <label>SCP(5)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStatus__c</fullName>
        <label>販売状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>販売中</fullName>
                    <default>true</default>
                    <label>販売中</label>
                </value>
                <value>
                    <fullName>停止中</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesnoneTax__c</fullName>
        <formula>/* 2016/01/08 EDIT
if ( StsTaxfee__c = &quot;0&quot;, if ( MOD(Field5__c,(1 + TaxRateCal__c)) = 0, Field5__c /(1 + TaxRateCal__c), if ( ROUND(MOD(Field5__c,(1 + TaxRateCal__c)),2) &gt;= 0.30, ROUND(Field5__c /(1 + TaxRateCal__c),0), Field5__c /(1 + TaxRateCal__c) )), Field5__c)
*/
/*2017/06/23 EDIT
Case (
NULLVALUE($Setup.ps__CommDefine__c.ps__UnitPriceDefKb__c, 2) ,
1, if ( ps__StsTaxfee__c = &quot;0&quot;, if ( MOD(ps__Field5__c,(1 + ps__TaxRateCal__c)) = 0, ps__Field5__c /(1 + ps__TaxRateCal__c), if ( ROUND(MOD(ps__Field5__c,(1 + ps__TaxRateCal__c)),2) &gt;=  (NULLVALUE (ps__TargetCost__c, 0.30)), ROUND(ps__Field5__c /(1 + ps__TaxRateCal__c),0), ps__Field5__c /(1 + ps__TaxRateCal__c) )), ps__Field5__c),
2, if ( ps__StsTaxfee__c = &quot;0&quot;, if ( MOD(ps__Field5__c,(1 + ps__TaxRateCal__c)) = 0, ps__Field5__c /(1 + ps__TaxRateCal__c), if ( ROUND(MOD(ps__Field5__c,(1 + ps__TaxRateCal__c)),2) &gt;=  (NULLVALUE (ps__TargetCost__c, 0.30)), ROUND(ps__Field5__c /(1 + ps__TaxRateCal__c),0), ps__Field5__c /(1 + ps__TaxRateCal__c) )), ps__Field5__c),
3, ps__Field5__c,
4, ps__Field5__c,
ps__Field5__c)
*/

IF (NULLVALUE (TankawithoutTaxSys__c, 0) != 0, TankawithoutTaxSys__c, 

IF ( 
$Setup.CommDefine__c.AccountNoTaxCalFlg__c != true || 
$Setup.CommDefine__c.RoundType__c = 2, 
Case ( 
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) , 
1, CEILING( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ), 
2, CEILING( NULLVALUE( Field5__c, 0) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ), 
3, CEILING( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, CEILING( NULLVALUE( Field5__c, 0)), 
0) 
, 
IF($Setup.CommDefine__c.RoundType__c = 0, 
Case ( 
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) , 
1, FLOOR( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ), 
2, FLOOR( NULLVALUE( Field5__c, 0) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ), 
3, FLOOR( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, FLOOR( NULLVALUE( Field5__c, 0) ), 
0) 
, 
Case ( 
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) , 
1, ROUND( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) , 0), 
2, ROUND( NULLVALUE( Field5__c, 0) / ( 1 + NULLVALUE (TaxRateCal__c, 0) ) , 0), 
3, ROUND( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) , 0), 
4, ROUND( NULLVALUE( Field5__c, 0) , 0), 
0) 
) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>会計明細の$単価(税抜)</inlineHelpText>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shelves__c</fullName>
        <label>棚</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>棚01</fullName>
                </value>
                <value>
                    <fullName>棚02</fullName>
                </value>
                <value>
                    <fullName>棚03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingDays__c</fullName>
        <inlineHelpText>ご注文から出荷までの所要時間の目安です</inlineHelpText>
        <label>発送可能日</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>会計商品</relationshipLabel>
        <relationshipName>AccountShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpDescription__c</fullName>
        <label>商品簡易説明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialMemo__c</fullName>
        <label>注意事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>特別税</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StaffName__c</fullName>
        <label>人材名前</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockUnit__c</fullName>
        <label>販売単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>個</fullName>
                </value>
                <value>
                    <fullName>本</fullName>
                </value>
                <value>
                    <fullName>枚</fullName>
                </value>
                <value>
                    <fullName>瓶</fullName>
                </value>
                <value>
                    <fullName>ダース</fullName>
                </value>
                <value>
                    <fullName>ケース</fullName>
                </value>
                <value>
                    <fullName>箱</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StsTaxfee__c</fullName>
        <inlineHelpText>0: 課税 99:非課税</inlineHelpText>
        <label>税ｽﾃｰﾀｽ</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>